--- a/istio/addons/kiali-2.12.0.yaml
+++ b/istio/addons/kiali-2.12.0.yaml
@@ -304,6 +304,7 @@ spec:
     appProtocol: http
     protocol: TCP
     port: 20001
+    nodePort: 30006
   - name: http-metrics
     appProtocol: http
     protocol: TCP
@@ -311,7 +312,7 @@ spec:
   selector:
     app.kubernetes.io/name: kiali
     app.kubernetes.io/instance: kiali
-...
+  type: NodePort
 ---
 # Source: kiali-server/templates/deployment.yaml
 apiVersion: apps/v1
